@@ -48,7 +48,7 @@ public class HudiPartitionStatsIndexSupport
     @Override
     public Map<String, List<FileSlice>> lookupCandidateFilesInMetadataTable(HoodieTableMetadata metadataTable, Map<String, List<FileSlice>> inputFileSlices, TupleDomain<String> regularColumnPredicates)
     {
-        throw new UnsupportedOperationException("This method is not supported by " + getClass().getSimpleName());
+        throw new UnsupportedOperationException("#lookupCandidateFilesInMetadataTable method is not supported by " + getClass().getSimpleName());
     }
 
     public Optional<List<String>> prunePartitions(
@@ -102,7 +102,7 @@ public class HudiPartitionStatsIndexSupport
                         return evaluateStatisticPredicate(filteredRegularPredicates, partitionStats, regularColumns);
                     }
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         log.info("Took %s ms to prune partitions using Partition Stats Index for table %s", timer.endTimer(), schemaTableName);
         return Optional.of(prunedPartitions);
